@@ -32,6 +32,8 @@ contributing to this release.
 - Bugfix in EditPane.java related to file status checks.
   (Patch #534 - Matt Galligan)
 
+- Fix for bug #3389 in BufferSwitcher.java where look and feel was locked to 
+  Metal. (Dale Anson)  
 
 }}}
 
